# OCSP-server

./: Cargo.toml  config.toml  shell.nix
.github/workflows/: rust.yml
src/: database.rs  main.rs  struct.rs
